Include profile name in AppUserModelId for default profile.

Migrate pinned PWA shortcuts as well.

This makes pinned icons for the default profile on Windows have
the profile name in the AppUserModelId, which prevents weird behaviors
when other profiles are added/removed.

If shortcuts are migrated, shortcuts without a profile will be migrated
to point to the default profile.

Originally submitted as 1658991, which was reverted because of an issue
with pinned PWA shortcuts.

Bug: 593414, 328738
Change-Id: I68bc7083e233cf6dd3cfd56359245df59fd0e4a1
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1686222
Reviewed-by: Gabriel Charette <gab@chromium.org>
Reviewed-by: Alan Cutter <alancutter@chromium.org>
Commit-Queue: David Bienvenu <davidbienvenu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#677305}

Former-commit-id: 7f9c2bffb455a553da2b0181acc28423e9bd67e1