chrome/browser/web_applications/components/web_app_shortcut_win.h
@@ -11,6 +11,8 @@
 
 namespace web_app {
 
+base::FilePath GetChromeProxyPath();
+
 namespace internals {
 
 // Returns the Windows user-level shortcut paths that are specified in
