chrome/browser/shell_integration_win_unittest.cc
@@ -18,6 +18,7 @@
 #include "base/test/test_shortcut_win.h"
 #include "base/win/scoped_com_initializer.h"
 #include "chrome/browser/web_applications/components/web_app_helpers.h"
+#include "chrome/browser/web_applications/components/web_app_shortcut_win.h"
 #include "chrome/common/chrome_constants.h"
 #include "chrome/common/chrome_paths_internal.h"
 #include "chrome/install_static/install_util.h"
@@ -65,6 +66,9 @@ class ShellIntegrationWinMigrateShortcutTest : public testing::Test {
     non_default_user_data_dir_and_profile_chrome_app_id_ =
         GetChromiumModelIdForProfile(
             non_default_user_data_dir_.Append(non_default_profile_));
+    default_profile_ = L"Default";
+    default_profile_chrome_app_id_ = GetChromiumModelIdForProfile(
+        default_user_data_dir.Append(default_profile_));
 
     extension_id_ = L"chromiumexampleappidforunittests";
     base::string16 app_name =
@@ -73,8 +77,6 @@ class ShellIntegrationWinMigrateShortcutTest : public testing::Test {
     extension_app_id_ = GetAppModelIdForProfile(app_name, default_profile_path);
     non_default_profile_extension_app_id_ = GetAppModelIdForProfile(
         app_name, default_user_data_dir.Append(non_default_profile_));
-
-    CreateShortcuts();
   }
 
   // Creates a test shortcut corresponding to |shortcut_properties| and resets
@@ -116,13 +118,13 @@ class ShellIntegrationWinMigrateShortcutTest : public testing::Test {
     // Shortcut 2 points to chrome.exe, but already has the right appid and thus
     // should only be migrated if dual_mode is desired.
     temp_properties.set_target(chrome_exe_);
-    temp_properties.set_app_id(chrome_app_id_);
+    temp_properties.set_app_id(default_profile_chrome_app_id_);
     ASSERT_NO_FATAL_FAILURE(
         AddTestShortcutAndResetProperties(&temp_properties));
 
     // Shortcut 3 is like shortcut 1, but it's appid is a prefix of the expected
     // appid instead of being totally different.
-    base::string16 chrome_app_id_is_prefix(chrome_app_id_);
+    base::string16 chrome_app_id_is_prefix(default_profile_chrome_app_id_);
     chrome_app_id_is_prefix.push_back(L'1');
     temp_properties.set_target(chrome_exe_);
     temp_properties.set_app_id(chrome_app_id_is_prefix);
@@ -131,7 +133,8 @@ class ShellIntegrationWinMigrateShortcutTest : public testing::Test {
 
     // Shortcut 4 is like shortcut 1, but it's appid is of the same size as the
     // expected appid.
-    base::string16 same_size_as_chrome_app_id(chrome_app_id_.size(), L'1');
+    base::string16 same_size_as_chrome_app_id(
+        default_profile_chrome_app_id_.size(), L'1');
     temp_properties.set_target(chrome_exe_);
     temp_properties.set_app_id(same_size_as_chrome_app_id);
     ASSERT_NO_FATAL_FAILURE(
@@ -191,9 +194,9 @@ class ShellIntegrationWinMigrateShortcutTest : public testing::Test {
     ASSERT_NO_FATAL_FAILURE(
         AddTestShortcutAndResetProperties(&temp_properties));
 
-    // Shortcut 11 points to chrome.exe, already has the right appid, and has
-    // dual_mode set and thus should only be migrated if dual_mode is being
-    // cleared.
+    // Shortcut 11 points to chrome.exe, has the chrome appid, and has
+    // dual_mode set and thus should be migrated to the
+    // default_profile_chrome_app_id, and dual_mode should be cleared.
     temp_properties.set_target(chrome_exe_);
     temp_properties.set_app_id(chrome_app_id_);
     temp_properties.set_dual_mode(true);
@@ -223,6 +226,12 @@ class ShellIntegrationWinMigrateShortcutTest : public testing::Test {
 
   // Chrome's AppUserModelId.
   base::string16 chrome_app_id_;
+
+  // Chrome's AppUserModelId for the default profile.
+  base::string16 default_profile_chrome_app_id_;
+
+  // The Default profile.
+  base::string16 default_profile_;
 
   // A profile that isn't the Default profile.
   base::string16 non_default_profile_;
@@ -256,22 +265,26 @@ class ShellIntegrationWinMigrateShortcutTest : public testing::Test {
 }  // namespace
 
 TEST_F(ShellIntegrationWinMigrateShortcutTest, ClearDualModeAndAdjustAppIds) {
-  // 9 shortcuts should have their app id updated below and shortcut 11 should
-  // be migrated away from dual_mode for a total of 10 shortcuts migrated.
-  EXPECT_EQ(10,
+  CreateShortcuts();
+  // 11 shortcuts should have their app id updated below including shortcut 11,
+  // which should also be migrated away from dual_mode.
+  EXPECT_EQ(11,
             MigrateShortcutsInPathInternal(chrome_exe_, temp_dir_.GetPath()));
 
-  // Shortcut 1, 3, 4, 5, 6, 7, 8, 9, and 10 should have had their app_id fixed.
-  shortcuts_[1].properties.set_app_id(chrome_app_id_);
-  shortcuts_[3].properties.set_app_id(chrome_app_id_);
-  shortcuts_[4].properties.set_app_id(chrome_app_id_);
-  shortcuts_[5].properties.set_app_id(chrome_app_id_);
+  // Shortcut 1, 3, 4, 5, 6, 7, 8, 9, 10, 11 and 12 should have had their app_id
+  // fixed.
+  shortcuts_[1].properties.set_app_id(default_profile_chrome_app_id_);
+  shortcuts_[3].properties.set_app_id(default_profile_chrome_app_id_);
+  shortcuts_[4].properties.set_app_id(default_profile_chrome_app_id_);
+  shortcuts_[5].properties.set_app_id(default_profile_chrome_app_id_);
   shortcuts_[6].properties.set_app_id(non_default_profile_chrome_app_id_);
   shortcuts_[7].properties.set_app_id(non_default_user_data_dir_chrome_app_id_);
   shortcuts_[8].properties.set_app_id(
       non_default_user_data_dir_and_profile_chrome_app_id_);
   shortcuts_[9].properties.set_app_id(extension_app_id_);
   shortcuts_[10].properties.set_app_id(non_default_profile_extension_app_id_);
+  shortcuts_[11].properties.set_app_id(default_profile_chrome_app_id_);
+  shortcuts_[12].properties.set_app_id(default_profile_chrome_app_id_);
 
   // No shortcut should still have the dual_mode property.
   for (size_t i = 0; i < shortcuts_.size(); ++i)
@@ -287,6 +300,24 @@ TEST_F(ShellIntegrationWinMigrateShortcutTest, ClearDualModeAndAdjustAppIds) {
             MigrateShortcutsInPathInternal(chrome_exe_, temp_dir_.GetPath()));
 }
 
+// Test that a chrome_proxy.exe shortcut (PWA) has its app_id migrated
+// to include the default profile name.
+TEST_F(ShellIntegrationWinMigrateShortcutTest, MigrateChromeProxyTest) {
+  // Create shortcut to chrome_proxy_exe in executable directory,
+  // using the default profile, with the AppModelId not containing the
+  // profile name. "chrome_proxy.exe" won't exist, but it appears that
+  // creating the shortcut succeeds.
+  base::win::ShortcutProperties temp_properties;
+  temp_properties.set_target(web_app::GetChromeProxyPath());
+  temp_properties.set_app_id(L"Dumbo");
+  ASSERT_NO_FATAL_FAILURE(AddTestShortcutAndResetProperties(&temp_properties));
+
+  MigrateTaskbarPinsCallback(temp_dir_.GetPath());
+  // Verify that the migrated shortcut now contains the default profile name.
+  shortcuts_[0].properties.set_app_id(default_profile_chrome_app_id_);
+  base::win::ValidateShortcut(shortcuts_[0].path, shortcuts_[0].properties);
+}
+
 TEST(ShellIntegrationWinTest, GetAppModelIdForProfileTest) {
   const base::string16 base_app_id(install_static::GetBaseAppId());
 
@@ -294,12 +325,13 @@ TEST(ShellIntegrationWinTest, GetAppModelIdForProfileTest) {
   base::FilePath empty_path;
   EXPECT_EQ(base_app_id, GetAppModelIdForProfile(base_app_id, empty_path));
 
-  // Default profile path should get chrome::kBrowserAppID
+  // Default profile path should get chrome::kBrowserAppID joined with
+  // profile info.
   base::FilePath default_user_data_dir;
   chrome::GetDefaultUserDataDirectory(&default_user_data_dir);
   base::FilePath default_profile_path =
       default_user_data_dir.AppendASCII(chrome::kInitialProfile);
-  EXPECT_EQ(base_app_id,
+  EXPECT_EQ(base_app_id + L".UserData.Default",
             GetAppModelIdForProfile(base_app_id, default_profile_path));
 
   // Non-default profile path should get chrome::kBrowserAppID joined with
